--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "inf-system",
   "version": "0.0.0",
+  "main": "electron/dist/electron/main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electron": "ng build --base-href ./ && tsc --p electron && electron ."
   },
   "private": true,
   "dependencies": {
@@ -19,8 +21,18 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.2",
+    "@types/chosen-js": "^1.8.1",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "electron-compile": "^6.4.4",
+    "jquery": "^3.3.1",
+    "nedb": "^1.8.0",
+    "ngx-electron": "^2.1.1",
+    "popper": "^1.0.1",
     "rxjs": "~6.3.3",
+    "tls": "0.0.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -29,10 +41,14 @@
     "@angular/cli": "~7.3.7",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@types/electron": "^1.6.10",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
+    "electron": "^4.1.3",
+    "electron-builder": "^20.39.0",
+    "electron-rebuild": "^1.8.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
