--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,9 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
             ],
             "es5BrowserSupport": true
           },
