--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.2",
     "@types/chosen-js": "^1.8.1",
+    "angular-font-awesome": "^3.1.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "crypto": "^1.0.1",
     "electron-compile": "^6.4.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "mongodb": "^3.2.4",
     "nedb": "^1.8.0",
     "ngx-electron": "^2.1.1",
     "popper": "^1.0.1",
