--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "electron": "ng build --base-href ./ && tsc --p electron && electron .",
-    "pack": "electron-packager .",
+    "pack": "electron-packager . --prune",
     "electron-build": "ng build --prod && electron .",
     "electron2": "electron ."
   },
@@ -33,8 +33,9 @@
     "crypto": "^1.0.1",
     "electron-compile": "^6.4.4",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.2.4",
     "mongodb": "^3.2.4",
+    "nedb": "^1.8.0",
     "ngx-electron": "^2.1.1",
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
